<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/available_units_button"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:background="#2C3E50"
                android:fontFamily="sans-serif-black"
                android:text="@string/available_units_button"
                android:textColor="#58D68D"
                android:textSize="15sp" />

            <Button
                android:id="@+id/about_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/about_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEnterAmount"
                android:layout_width="192dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/enter_amount"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="14dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="" />

            <EditText
                android:id="@+id/editTextAmount"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="181dp"
                android:layout_height="80dp"
                android:cursorVisible="true"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:textCursorDrawable="@null"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textColorHighlight="#0000ff"
                android:textColorHint="#ABB2B9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEnterUnit"
                android:layout_width="180dp"
                android:layout_height="47dp"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:text="@string/enter_unit"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="" />

            <AutoCompleteTextView
                android:id="@+id/editTextUnit"
                android:layout_width="182dp"
                android:layout_height="80dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:textCursorDrawable="@null"
                android:hint="@string/unit_hint"
                android:inputType="text"
                android:popupBackground="#D5D8DC"
                android:textColor="@color/white"
                android:textColorHint="#ABB2B9">

            </AutoCompleteTextView>



        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <Button
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="#F4D03F"
            android:fontFamily="sans-serif-black"

            android:text="@string/convert_button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textViewAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>